more cleanup, file renames

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "downlevelIteration": true,
         "esModuleInterop": true,
         "module": "system",
-        "noImplicitAny": false,
+        "noImplicitAny": true,
         "removeComments": true,
         "preserveConstEnums": true,
         "sourceMap": true,
