--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
     "npm": "^6.5.0",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
-    "typescript": "^3.2.2"
-  },
-  "dependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.26.0"
+    "typescript": "4.9",
+    "prettier": "^2.8.3"
   }
 }
