--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^23.3.11",
-    "@types/node": "^10.12.18",
+    "@types/node": "^18.14.0",
     "babel-cli": "^6.26.0",
     "babel-jest": "^23.6.0",
     "babel-plugin-module-resolver": "^3.1.1",
@@ -26,9 +26,9 @@
     "install": "^0.12.2",
     "jest": "^23.6.0",
     "npm": "^6.5.0",
+    "prettier": "^2.8.3",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
-    "typescript": "4.9",
-    "prettier": "^2.8.3"
+    "typescript": "4.9"
   }
 }
